# Dining-philosophers

./: .gitignore  CMakeLists.txt  main.cpp  main.py
include/: Chopstick.hpp  Philosopher.hpp  Semaphore.hpp  Utils.hpp
src/: Chopstick.cpp  Philosopher.cpp  Semaphore.cpp  Utils.cpp  main.cpp
